# ChangeLog for dev-python/pexpect
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pexpect/ChangeLog,v 1.87 2015/01/31 07:02:13 vapier Exp $

  31 Jan 2015; Mike Frysinger <vapier@gentoo.org> pexpect-3.3.ebuild:
  Add mips love.

  01 Dec 2014; Agostino Sarubbo <ago@gentoo.org> pexpect-3.3.ebuild:
  Stable for sparc, wrt bug #524416

  19 Nov 2014; Ian Delaney <idella4@gentoo.org> pexpect-3.3.ebuild:
  Add pypy3 support

  11 Nov 2014; Agostino Sarubbo <ago@gentoo.org> pexpect-3.3.ebuild:
  Stable for ia64, wrt bug #524416

  10 Nov 2014; Agostino Sarubbo <ago@gentoo.org> pexpect-3.0.ebuild:
  Stable for ppc64, wrt bug #506042

  10 Nov 2014; Agostino Sarubbo <ago@gentoo.org> pexpect-3.0.ebuild:
  Stable for ppc, wrt bug #506042

  02 Nov 2014; Agostino Sarubbo <ago@gentoo.org> pexpect-3.3.ebuild:
  Stable for alpha, wrt bug #524416

  31 Oct 2014; Agostino Sarubbo <ago@gentoo.org> pexpect-3.3.ebuild:
  Stable for ppc64, wrt bug #524416

  26 Oct 2014; Justin Lecher <jlec@gentoo.org> pexpect-3.3.ebuild:
  add pypy support, #491404

  18 Oct 2014; Agostino Sarubbo <ago@gentoo.org> pexpect-3.3.ebuild:
  Stable for x86, wrt bug #524416

  18 Oct 2014; Agostino Sarubbo <ago@gentoo.org> pexpect-3.3.ebuild:
  Stable for ppc, wrt bug #524416

  09 Oct 2014; Agostino Sarubbo <ago@gentoo.org> pexpect-3.3.ebuild:
  Stable for amd64, wrt bug #524416

  04 Oct 2014; Jeroen Roovers <jer@gentoo.org> pexpect-3.3.ebuild:
  Stable for HPPA (bug #524416).

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> pexpect-3.0.ebuild:
  Stable for HPPA (bug #506042).

  02 Aug 2014; Agostino Sarubbo <ago@gentoo.org> pexpect-3.0.ebuild:
  Stable for x86, wrt bug #506042

  02 Aug 2014; Agostino Sarubbo <ago@gentoo.org> pexpect-3.0.ebuild:
  Stable for amd64, wrt bug #506042

  24 Jul 2014; Markus Meier <maekke@gentoo.org> pexpect-3.3.ebuild:
  arm stable, bug #506042
