@@ -5,25 +5,23 @@ AUX 61-stix.conf 1929 SHA256 347686b5a28977347121fabc10413ded6554c43ebdf7ea8bc1a
 DIST STIXv1.0.0.zip 2761626 SHA256 2f10ee4deaf93e31d2fad6b4df2091e4c56b8c144499da4c0178fc0e4a873cfe SHA512 c3b8a35656bc22fb903917d5c976a742026f7f63c2e1969de120a85d439af2ad54721947a4fee6fc5fecfcb35b928666e8853c02936ca9fcd1f459d5765d8578 WHIRLPOOL 8105790082042808b74eada2ec3e588bc02b168e6343f74f1a655e3560fc3e59a7c28d4529aa8ce23bad027cbec662d7afd41074fb86d3bd910ebaa571042d3e
 DIST STIXv1.1.1-word.zip 1834654 SHA256 98f86eccef5d81daff07a00d9cc8350c2400e9193f59b5da4507da61f1e265e0 SHA512 df5171f1a2de4e4e513013b47943cc8f7e210c59ddc11bb4d1f7d07680d7efdd0c73c96a349e523fbca24782314ded81a4eeb1b87aeb2a2c81d00fa9dbcd4b11 WHIRLPOOL 28592dbb5d5c07cd11c5aeb023aea939bb5089e0e0504f706b7ae6cc24cadb75ef1ace9be95063d67a5dfb1c263a11933136dbcb930adfd54dc7a9f6da07eede
 EBUILD stix-fonts-1.0.0-r1.ebuild 913 SHA256 e19913862abb7c3aed8aefd547dda5142cdb1fa8ffc4999b19c651e0658cdf25 SHA512 19953bb503c063b80102529880dc1090a910c80f53743f241490d435c465a314ddc1b3e1ba94b7a62a688b146c5b0138ab98a15d334fbe246d80646caaebb306 WHIRLPOOL b05c1419c29ccfdafcead8ed3f4b65ac44f4f0ba6d1812f0a5a25f97e24f9509045fade2c2e7a519bb14be9b0e34bbf94e7370be916967d409d5c3b8a867a080
-EBUILD stix-fonts-1.1.1.ebuild 903 SHA256 7810a4ce8e2bbe9f26c8203630c657a626ebb3918b6249df2f0936526da6c16c SHA512 7b96466556b22be2cccbe1d6f4ad469db1bf25aa77351df28b10c5b6786d8e3b76fc12a108d09aa97997899a7652c7b98ceb695b052bc87c9ce2840a29857774 WHIRLPOOL ffe0b7e2f3984e092059d4d0464b939333d925edd0e4b90f17e09439171587323530e6139ea2ad871dc4c5a27d4303f71133c32b7e5681b4773e9c44e6a9963b
-MISC ChangeLog 2029 SHA256 0213be8530e9074248107832f9fa402d338a70ff8fac102aa9b48ce7fa046f30 SHA512 a93569b1a19b0f6d5c7890ae207a54a036eec851a387304b56e87e9d41ffd64b8c3344ba080103077efc3f803d41a7125b542c88a08f6194ffebfb52a63bf43e WHIRLPOOL 7503a75398d8019915ba5c0ac42166cbe847d9ba89c38883cab5aed801bc51e457967cecfb774e16dd082fed2e7e8aa49328067b3a288e24beae79e9e520fae4
+EBUILD stix-fonts-1.1.1.ebuild 932 SHA256 1b1467d8c4469dbe188f822d93236f73472a03d9aeff84adacb75ae82f46f5a5 SHA512 5dba93e160b0e1b9509a67610f9ff32319934a719e8f56dbbea81c5356fef2d5d81ff7b19493e42826a4b30df73e742354ac003443c78292d7ad7415307fc1a5 WHIRLPOOL 083f29d17928913d7b7430c9bae7abb14118330bd31541f279b0113768ebfeb393dd97ddd2d37aaad3d104638fb73b019a92bcfaf22877d8270c99c32172670c
+MISC ChangeLog 2144 SHA256 6776f3216f2f136f7c4d0aa86fb27b5dcd42688efc1e73ed3c0ab18cbf3a2e79 SHA512 270f63d5f66e081cc9a41ef49baced3a4f567d006c12d934460ba892741bd4a88601effa8bb3fbaa1c2f3ecce3bf4339c513283618d412a40e0e917ca43bba18 WHIRLPOOL 278a16ca2236b801d25c60b840592703d52295bb2b4c98ce2b94861304ba9c53f09af8aca22094abe37a51413173875b7ac5c4043e57dbac0bf3e45670219897
 MISC metadata.xml 159 SHA256 952d89bc3335f3d2f69460945016b173913db58759fe7d906f3927909120c890 SHA512 cfd19756be16a4f8750ddaf69904dd799a44e28fbad1771fb6dee8f455e3d640c756cbd8ff7dbd09303424ef9bb0d6a9865d2abf9204705508288a8fb3632334 WHIRLPOOL cb481aabaf1a3f0606384612a2247f015b3303de5d9f0fdd2b3553929fe41220678744fccf970a1fb2861718b0631b6d3f98f2a4804b65df869a56bb3bf1a877
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJU6AqeXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
-RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFODj8P/1N7tJYY0VPC6uWmBiPxbL5M
-TgubPv8ZAxmCl5xZQU/TlGqD3tt+XzSQckDRInXF8bsqeBCl/Hd7Ijn/6DzvEjgo
-HELl1l5mmRvm9qq3S3WE/EYRkCk205+y0KxXiLN1vZG42spWwmDb4g99UgUlGZyJ
-mkc4fW6F1EpckuHN30b4UUhgbsYAAD8qOQ1lNJJ7zlohJ4n+8KF4xJcLEjwFLnS0
-Neza/tAHKcwz+4CsRII0o7hYLof+y9uKGUN5q5VEw8YOnDn429U8LtbNtjYV06Qg
-pQEXZyyulwqh6bZSMIsOctQkMcJRqEKpHh/fhSX7Tp1+3fYHaAZbZ0MQt3tDeOhD
-D5VQehga6W69RzC/1QobTSw1kiM+FPPSMIQ5Jcso2y8IfsgSD1wpRTfjR44NLBDE
-Aisnk+++t9/1Q4GuWZN92uozsMXCojMEeYHU0Dg19/tYx4GRHIBonIyymqDeGr5f
-a/Qw36Y+HXFZfBGAsegJrwLDgdZsG8gg32+AW4G5XWl7Op7t3pJjjXutMT5lS3mq
-4iDzJZp/Fz7DkkOFS6re5VeZIyg8IZjW85weXcrIR20C934SUqN94CVNjMixfmJu
-1jrcsPM+A27s5GK1O52c/ybaUW8SFEE73G4865noC1Gabx8/+6vIpvrcds5z4n7R
-gbZvotTciICtoocJBrVs
-=5Acp
+iQIcBAEBCAAGBQJU+pYCAAoJEPGu1DbS6WIA70UP/RxU7iM7CqSulcRyMlSlZEl+
+10g+e/kPcTyKPhGcdaagrKM37Q+7JX9AJkp+4un1faB6o8OmAmukpSlsZybcdivF
+oIGDvq815GQOSSqR6d2vNpbMEXxhxl9RyFUxZQQS0BzSm/1T46GmU1UtaT+4TaDY
+h/gd6hAtlKfpr8kGuedDAQajtlEM3vHJbk0i8K0ssqmAIg9EBbUmgY0NZ84i6pXi
+bwxiOLfEMrEjEsfdTTQJ6pIzYPcm0Ox2m1bBpXXJ1yciJRST4R9Wcnf9pvdT8qBw
+wOdRbVWOseNqEO5m8iygmHtbqnuc2ZIl+BsKSyJsIGhbDM4sB0P+N7Vr5MH7zFdS
+5Nx0ig9wup0bX6hkfnFxL0cFl3IKWqhgcTYg+BfONkEIrDp4xuebu2rfGvpVqGfk
+Drl1j3jRQUzP792c7hfqvwX6zeF9GQulCDyApmu4lOcd8sfMS/Ag/G/ip6QDJMWG
++NTABMb/ydyPUVrlCUor4BnHEnkVWTKWQpSEtxiPv+oowRpIKTdPcLPg4LC86f9X
++FJHFAIAtoeg0mpIBIYxEJAa50UU9uGCTZ+nSfqwVwJPftNyARmMAHO9mqJAnIHd
+GnerOj+PezKRQtgQ7EXSR0hxQy8/E0zdCM+bAt1Q3IOX6DZLkrTfuJB/2Atibka4
+Qf27aYnZPii/sgL5CJTP
+=Xley
 -----END PGP SIGNATURE-----
