@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/stix-fonts/stix-fonts-1.1.1.ebuild,v 1.1 2015/02/21 04:33:29 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/stix-fonts/stix-fonts-1.1.1.ebuild,v 1.2 2015/03/07 06:09:04 vapier Exp $
 
 EAPI=5
 inherit font
@@ -11,7 +11,7 @@ SRC_URI="mirror://sourceforge/${PN/-/}/STIXv${PV}-word.zip"
 
 LICENSE="OFL-1.1"
 SLOT="0"
-KEYWORDS="~amd64 ~arm ~mips ~ppc ~ppc64 ~x86 ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos"
+KEYWORDS="~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~x86 ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos"
 IUSE=""
 
 DEPEND="app-arch/unzip"
