@@ -4,10 +4,10 @@ DESCRIPTION=Comprehensive OpenType font set of mathematical symbols and alphabet
 EAPI=5
 HOMEPAGE=http://www.stixfonts.org/
 IUSE=X
-KEYWORDS=~amd64 ~arm ~mips ~ppc ~ppc64 ~x86 ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos
+KEYWORDS=~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~x86 ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos
 LICENSE=OFL-1.1
 RESTRICT=binchecks strip test
 SLOT=0
 SRC_URI=mirror://sourceforge/stixfonts/STIXv1.1.1-word.zip
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	font	b3239d2dc442d1717b9725e2be7cb5d6	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
-_md5_=ff6ab32422685454306b75193c8e2d17
+_md5_=cae208bf0eb4c9b28be866825b8ac5d0
