@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyparsing
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyparsing/ChangeLog,v 1.117 2015/03/07 00:18:13 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyparsing/ChangeLog,v 1.118 2015/03/07 06:04:42 vapier Exp $
+
+  07 Mar 2015; Mike Frysinger <vapier@gentoo.org> pyparsing-2.0.3.ebuild:
+  Mark arm64/s390/sh stable.
 
   07 Mar 2015; Pacho Ramos <pacho@gentoo.org> pyparsing-2.0.3.ebuild:
   ppc64 stable, bug 540290
